<resources>
    <string name="app_name" translatable="false">Blubb</string>
    <string name="authorization">Authorisation</string>
    <string name="nickname">Nickname</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="create_account">Create account</string>
    <string name="login_via">Log in via</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="online">Online</string>
    <string name="add_friend">Add friend</string>
    <string name="write">Write</string>
    <string name="report">Report</string>
    <string name="account_creation">Account creation</string>
    <string name="email">Email</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="settings">Settings</string>
    <string name="change_image">Change image</string>
    <string name="change_password">Change password</string>
    <string name="delete_account">Delete account</string>
    <string name="log_out">Log out</string>
    <string name="other">Other</string>
    <string name="language">Language</string>
    <string name="russian">Russian</string>
    <string name="english">English</string>
    <string name="theme">Theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="friends">Friends</string>
    <string name="total">Total</string>
    <string name="delete_friend_question">Are you sure you want to delete this friend?</string>
    <string name="delete_account_question">Are you sure you want to delete this account?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="authorization_error">Wrong login or password</string>
    <string name="сommunication">Сommunication</string>
    <string name="your_id">Your ID</string>
    <string name="search_friends">Search friends</string>
    <string name="id_or_nickname">ID or nickname</string>
    <string name="log_out_question">Are you sure you want to log out of your account?</string>
    <string name="save">Save</string>
</resources>