<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_tint"
    tools:context=".presentation.fragments.CreateAccountFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewAccountCreationTitle"
            style="@style/dark_theme_label_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:gravity="center_horizontal"
            android:text="@string/account_creation" />

        <EditText
            android:id="@+id/editTextCreateAccountNickname"
            style="@style/dark_theme_main_edittext_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="64dp"
            android:ems="10"
            android:hint="@string/nickname"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextCreateAccountEmail"
            style="@style/dark_theme_main_edittext_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="48dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="text|textEmailAddress" />

        <EditText
            android:id="@+id/editTextCreateAccountPassword"
            style="@style/dark_theme_main_edittext_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="48dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="text|textPassword" />

        <EditText
            android:id="@+id/editTextCreateAccountRepeatPassword"
            style="@style/dark_theme_main_edittext_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="48dp"
            android:layout_marginTop="48dp"
            android:ems="10"
            android:hint="@string/repeat_password"
            android:inputType="text|textPassword" />

        <Button
            android:id="@+id/buttonCreateAccountCreate"
            style="@style/dark_theme_main_button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="64dp"
            android:layout_marginTop="64dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/create_account" />

        <Button
            android:id="@+id/buttonCreateAccountAuthorization"
            style="@style/dark_theme_main_button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="64dp"
            android:layout_marginTop="32dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/authorization" />
    </LinearLayout>

</FrameLayout>